MDEV-10357 my_context_continue() does not store current fiber on Windows

Make sure current fiber is saved in my_context::app_fiber
in both my_context_spawn() and my_context_continue()